# Polynomial

./: CMakeLists.txt  main.cpp  polynomial.cpp  polynomial.h
